2008-08-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (nullify_sale_win): Set to selection none the tree view
	with the details of a sale.

	* rizoma_informes.c (reports_win): Removed the max width to
	columns on tree_view_sell_rank tree view.
	(reports_win): Added the proper symbol at the end of every column
	to show if they are money or percent numbers.
	(fill_caja_data): Added payed cash to the cash box report.

	* administracion_productos.c (admini_box): Changed the column type
	stock from INT to DOUBLE.

2008-08-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_nullify_search_clicked): Modified the query
	that gets the sales to nullify.
	(on_btn_nullify_ok_clicked): Fixed some minor bugs.
	(on_selection_nullify_sales_change): Removed condition that was
	asking for the id_detail on venta_anulada.

	* manejo_productos.c (ListClean): Fixed to not pass anything when
	venta->header is a null pointer.

	* ventas.c (on_btn_nullify_ok_clicked): Modified to deal with the
	new nullify concept.

	* postgres-functions.c (nullify_sale): Modified to accept only one
	argument, the sale id.

	* ventas.c (nullify_sale_datail): Deleted function.

2008-07-29  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* rizoma_informes.c (fill_caja_data): Replaced the use of a big
	query for a plpsql function.

2008-07-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (ModificarMargenVenta): Fixed to fit
	with the use of GtkBuilder.
	(Recepcion, RecivirWindow, Devolucion, DevolucionWindow): Deleted functions.
	Deleted unnecessary vars.

2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* caja.h: Deleted GtkWidget *caja_button.

	* caja.c (ArqueoCajaLastDay): Deleted function.

	* ventas.c (FillProductSell): Replaced g_ascii_strtod() for
	g_strtod() and PUT macro.
	(SearchProductByCode): Added a gdouble stock var to eval if the
	product really has stock. This avoid any problem of products with
	stock between 0 and 1.
