@@ -1,5 +1,8 @@
 2008-08-07  Jonathan Gonzalez V.  <zeus@gnu.org>
 
+	* rizoma-config.c (create_config): Changed the default profile
+	from DEFAULT to RIZOMA.
+
 	* ventas.c (nullify_sale_win): Set to selection none the tree view
 	with the details of a sale.
 
